# 3d-graphics-engine

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  test_image.ppm
include/engine/: engine.h  engine.hpp  image.h  image.hpp  mesh.h  mesh.hpp  shader.h  shader.hpp  texture.h  texture.hpp  window.h  window.hpp
include/engine/renderer/: color.hpp  renderer.h  renderer.hpp
include/raspberry/: engine.hpp  math.hpp  model.hpp  renderer.hpp  types.hpp
src/: engine.c  engine.cpp  image.c  image.cpp  main.c  main.cpp  main.rs  mesh.c  mesh.cpp  mesh.rs  model.cpp  renderer.cpp  renderer.rs  shader.c  shader.cpp  texture.c  texture.cpp  window.c  window.cpp
src/renderer/: color.cpp  renderer.c  renderer.cpp
